2007-09-26  Mark Rowe  <mrowe@apple.com>

        Gtk build fix.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:  Check for empty URL instead of invalid URL.

2007-09-17  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Adam.

        WebKitGtkPage and WebKitGtkFrame have a dependency on each other. To
        allow client code to include both headers the typedef's for
        WebKitGtkFrame, WebKitGtkPage, WebKitGtkFrameData and WebKitGtkNetworkRequest
        are moved into webkitgtkdefines.h and included by both webkitgtkpage.h and
        webkitgtkframe.h

        * Api/webkitgtkdefines.h:
        * Api/webkitgtkframe.h:
        * Api/webkitgtkpage.h:

2007-09-17  Cyril Brulebois  <cyril.brulebois@enst-bretagne.fr>

        Reviewed by Mark, some Coding Style changes by Holger.

        This is from http://bugs.webkit.org/show_bug.cgi?id=14812.

        Add title and location to WebKitGtkFramePrivate, add
        webkit_gtk_frame_get_location to the WebKitGtkFrame API as well
        as a title_changed callback, implement
        webkit_gtk_frame_get_title and webkit_gtk_frame_get_location.

        Initial patch by Diego Escalante Urrelo.

        * Api/webkitgtkframe.cpp:
        * Api/webkitgtkframe.h:
        * Api/webkitgtkprivate.h:

2007-09-15  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Mark.

        Use the new WebCore::String::fromUTF8 function to convert
        from the Gtk+ representation of a string to WebCore::String.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::runJavaScriptPrompt):

2007-09-10  Nigel Tao  <nigeltao@gnome.org>

        Reviewed by Mark Rowe.

        Fix a typo where webkit_gtk_page_can_copy was declared twice,
        rather than webkit_gtk_page_can_paste.

        * Api/webkitgtkpage.h:

2007-09-08  Brady Eidson  <beidson@apple.com>

        Better build fix

        * WebCoreSupport/FrameLoaderClientGtk.cpp: