@@ -1,3 +1,15 @@
+2007-09-29  Lars Lindner  <lars.lindner@gmail.com>
+
+        Reviewed by Adam.
+
+        ChromeClientGtk.cpp does not implement mouseDidMoveOverElement()
+        http://bugs.webkit.org/show_bug.cgi?id=15299
+
+        Implementing "hovering_over_link" signal.
+
+        * WebCoreSupport/ChromeClientGtk.cpp:
+        (WebKit::ChromeClient::mouseDidMoveOverElement):
+
 2007-09-26  Mark Rowe  <mrowe@apple.com>
 
         Gtk build fix.
